--- a/webapp/view/ItemDetail.view.xml
+++ b/webapp/view/ItemDetail.view.xml
@@ -308,13 +308,12 @@
                 <uxap:subSections>
                     <uxap:ObjectPageSubSection>
                         <uxap:blocks>
-                            <Table items="{PRItem>/to_accounts}">
+                            <Table visible="{= !${ui>/editing} }" items="{PRItem>/to_accounts}">
                                 <headerToolbar>
                                     <Toolbar>
                                         <content>
                                             <Title text="{i18n>AcctAss} ({= ${PRItem>/to_accounts}.length })"/>
                                             <ToolbarSpacer/>
-                                            <Button icon="sap-icon://add" press="onAddAccAssPress"/>
                                         </content>
                                     </Toolbar>
                                 </headerToolbar>
@@ -344,7 +343,6 @@
                                 </items>
                             </Table>
                             <Table mode="MultiSelect"
-
                                    visible="{ui>/editing}" items="{PRItem>/to_accounts}">
                                 <headerToolbar>
                                     <Toolbar>
@@ -519,6 +517,7 @@
                             <VBox width="100%">
                                 <items>
                                     <UploadCollection
+                                            width="100%"
                                             id="UploadCollection"
                                             maximumFilenameLength="55"
                                             maximumFileSize="10"
@@ -542,8 +541,7 @@
                 <uxap:subSections>
                     <uxap:ObjectPageSubSection>
                         <uxap:blocks>
-                            <mvc:XMLView controllerName="com.tw.mypr.My_custom_pr.controller.DocumentFlow"
-                                         viewName="com.tw.mypr.My_custom_pr.view.DocumentFlow"/>
+                            <core:Fragment type="XML" fragmentName="com.tw.mypr.My_custom_pr.fragment.DocumentFlow"/>
                         </uxap:blocks>
                     </uxap:ObjectPageSubSection>
                 </uxap:subSections>
